--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -10,12 +10,12 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 # system dependencies
 RUN apt-get update
 RUN apt-get upgrade -y
-RUN apt install -y git gcc python3-dev
+RUN apt install -y git gcc python3-dev g++ libjpeg-dev libjpeg-progs libjpeg-tools libopenjp2-7 libopenjp2-7-dev
 
 # python dependencies
 COPY ./requirements.txt .
-COPY . .
 RUN pip install --upgrade pip setuptools wheel
 RUN pip install -r requirements.txt
-# RUN python3 -u sync_commands.py
+#RUN python3 -u sync_commands.py
+COPY . .
 CMD ["python", "-u", "main.py"]
