--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ e==1.4.5
 emoji-country-flag==1.3.0
 expiringdict==1.2.1
 fold-to-ascii==1.0.2.post1
-git+https://github.com/Rapptz/discord.py@06df0d7
+git+https://github.com/Rapptz/discord.py
+#py-cord
+#discord.py
+#git+https://github.com/Pycord-Development/pycord
 humanfriendly==10.0
 humanize==3.12.0
 idna==3.3
@@ -23,7 +26,7 @@ pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 six==1.16.0
 toml==0.10.2
-typing-extensions==3.10.0.2
+#typing-extensions==3.10.0.2
 yarl==1.7.0
 colorthief==0.2.1
 tzdata==2021.5
@@ -31,3 +34,4 @@ tzlocal==4.1
 bs4==0.0.1
 ujson==4.2.0
 msgpack==1.0.2
+youtube-dl
